--- a/index.html
+++ b/index.html
@@ -90,97 +90,108 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x">
                         <i class="fa fa-circle fa-stack-2x text-primary html5"></i>
                         <i class="fa fa-html5 fa-stack-1x fa-inverse"></i>
                     </span>
+                    <p>HTML 5</p>
                 </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x">
                         <img src="img/bootstrap.png" alt="">
                     </span>
+                    <p>Bootstrap</p>
                 </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x">
                         <i class="fa fa-circle fa-stack-2x text-primary css3"></i>
                         <i class="fa fa-css3 fa-stack-1x fa-inverse"></i>
                     </span>
+                    <p>CSS 3</p>
                 </div>
-                <div class="col-md-2">
-                        <span class="fa-stack fa-4x">
+                <div class="col-md-3">
+                        <span class="fa-stack fa-2x">
                         <img src="img/js.png" alt="">
                     </span>
+                    <p>JavaScript</p>
                 </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x">
                         <img src="img/php.png" alt="">
                     </span>
+                    <p>PHP 7</p>
                 </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x">
                         <img src="img/angular.png" alt="">
                     </span>
+                    <p>Angular 4</p>
                 </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x">
                         <img src="img/nodejs.png" alt="">
                     </span>
+                    <p>NodeJs</p>
                 </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x">
                         <img src="img/Java.png" alt="">
                     </span>
+                    <p>Java</p>
                 </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x" style="top: 35px;">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x" >
                         <img src="img/java-maven.png" alt="">
                     </span>
+                    <p>Maven</p>
                 </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x" style="top: 35px;">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x" >
                         <img src="img/java-hibernate.png" alt="">
                     </span>
+                    <p>Hibernate</p>
                 </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x" style="top: 35px;">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x" >
                         <img src="img/java-springboot.png" alt="">
                     </span>
+                    <p>Springboot</p>
                 </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x" style="top: 50px;">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x" >
                         <img src="img/junit.png" alt="">
                     </span>
+                    <p>JUnit</p>
                 </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x" style="top: 50px;">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x" >
                         <img src="img/jenkins.svg" alt="">
                     </span>
+                    <p>Jenkins</p>
                 </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x" style="top: 50px;">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x" >
                         <img src="img/mysql.png" alt="">
                     </span>
+                    <p>Mysql</p>
                 </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x" style="top: 50px;">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x" >
                         <img src="img/sql-server.png" alt="">
                     </span>
+                    <p>MS Sql Server</p>
                 </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x" style="top: 50px;">
-                        <img src="img/oracle.webp" alt="">
-                    </span>
-                </div>
-                <div class="col-md-2">
-                    <span class="fa-stack fa-4x" style="top: 50px;">
+                <div class="col-md-3">
+                    <span class="fa-stack fa-2x" >
                         <img src="img/python.png" alt="">
                     </span>
+                    <p>Python</p>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Team Section -->
+    <!-- Team Section
     <section id="proj" class="bg-light-gray">
         
     </section>
