--- a/curriculo.html
+++ b/curriculo.html
@@ -71,7 +71,22 @@
           <div class="subheading mb-5">Rua Antonio Jacinto C.,1927 · Franca, SP 14409693 · (016) 99292-4139 ·
             <a href="mailto:name@email.com">Thayller Vilela Cintra</a>
           </div>
-          <p class="mb-5">Eu tenho experiência no desenvolvimento de plataformas online como ecommerces, sites, blogs, entre outros utilizando das mais recentes tecnologias.</p>
+          <p class="mb-5">
+              Sou Thayller nascido em Franca interior de São Paulo, minha familía é de origem pobre
+            e por isso sempre precisei me esforçar para conquistar oque eu queria, desde cedo tive meus 
+            primeiros contatos com computadores e graças a isso fui me apaixonando mais e mais. Primeiro
+            comecei aprendendo manutenção de computadores através de um curso básico que na época era 
+            oferecido pelo sindicato do curtume, logo após fui apresentado ao curso técnico do senac e 
+            por lá conheci um pouco de todas as áreas que o TI oferecia e com esse curso conquistei meu
+            primeiro emprego na área.
+          </p>
+          <p class="mb-5">
+              Depois de finalizar o curso técnico fiz alguns cursos rápidos focados em certificação, e
+            logo depois fui apresentado a mais uma formação que é o Tecnologo em Análise e Desenvolvimento de
+            Sistemas que é oferecido pela Fatec, com esse curso tive mais uma oportunidade que é a de me tornar
+            um desenvolvedor web. Com todas essas oportunidades aprendi a ser autodidata e a focar minhas forças 
+            e atenção em oportunidades que agreguem em meu conhecimento e crescimento profissional e pessoal.
+          </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://twitter.com/rellyaht">
@@ -109,7 +124,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Developer</h3>
               <div class="subheading mb-3">Eddydata Tecnologia em Gestão Pública</div>
-              <p>Fazia parte da equipe que dava manutenção de desenvolvia novas implementações dos sistemas da parte contábil.</p>
+              <p>Eu era membro da equipe encarregada de manter em funcionamento todos os sistemas da área contabil que a empresa desenvolvia.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Agosto 2017 - Novembro 2017</span>
@@ -120,7 +135,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Developer</h3>
               <div class="subheading mb-3">PXW Studio</div>
-              <p>Encarregado de desenvolver toda a parte de back-end de ecommerces e blogs desenvolvidos pela empresa, e prestar suporte para as plataformas já existentes.</p>
+              <p>Encarregado de desenvolver toda a parte de back-end da agência, ou seja, Desenvolvia novos projetos e dava manutenção nos antigos.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Junho 2014 - Julho 2017</span>
@@ -232,8 +247,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Intereses</h2>
-          <p>Sou um desenvolvedor focado em sempre oferecer a melhor qualidade em meu trabalho.Em meu tempo livre gosto de estudar e aprender novas tecnologias.</p>
-          <p class="mb-0">Alem de sempre estar aprimorando meu raciocinio com cubo magico e outros jogos.</p>
+          <p>Me interesso em tudo que me traga um novo conhecimento, ou até uma nova perpectiva daquilo que já sei.</p>
+          <p class="mb-0">Gosto muito de programar e também de jogos que estimulem meu raciocínio.</p>
         </div>
       </section>
 
