--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a class="page-scroll" href="#services">Conhecimentos Técnicos</a>
                     </li>
                     <!--<li>
-                        <a class="page-scroll" href="#proj">Projetos realizados</a>
+                        <a class="page-scroll" href="#proj">Portfolio</a>
                     </li>-->
                     <li>
                         <a class="page-scroll" href="#contact">Contato</a>
@@ -191,10 +191,26 @@
             </div>
         </div>
     </section>
-    <!-- Team Section
-    <section id="proj" class="bg-light-gray">
-        
-    </section>
+    <!-- Team Section 
+    <section id="proj" class="bg-light-gray content-section">
+        <div class="container">
+          <div class="content-section-heading text-center">
+            <h2 class="section-heading">Portfolio</h2>
+            <h3 class="section-subheading text-muted">Projetos desenvolvidos e em desenvolvimento</h3>
+          </div>
+          <div class="row no-gutters">
+            <div class="col-md-3 col-sm-6 text-center">
+              <a class="portfolio-item" href="#">
+                <span class="caption">
+                  <span class="caption-content">
+                  </span>
+                </span>
+                <img class="img-fluid" src="img/portfolio/locloc.png" alt="" width="255px" height="171">
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
 
     <!-- Contact Section -->
     <section id="contact">
